[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusion-query"
version = "0.1.0"
description = "Universal Oracle Fusion Cloud SQL query engine via BI Publisher"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "fusion-query contributors" },
]
keywords = ["oracle", "fusion", "cloud", "sql", "bi-publisher", "erp", "hcm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn>=0.20"]
cli = ["rich>=13.0"]
all = ["fastapi>=0.100", "uvicorn>=0.20", "rich>=13.0"]

[project.scripts]
fusion-query = "fusion_query.cli:main"

[project.urls]
Homepage = "https://github.com/AleCyriaco/fusion-query"
Documentation = "https://github.com/AleCyriaco/fusion-query#readme"
Issues = "https://github.com/AleCyriaco/fusion-query/issues"

[tool.hatch.build.targets.wheel]
packages = ["fusion_query"]

[tool.hatch.build.targets.wheel.force-include]
"fusion_query/setup/FusionQueryProxy.xdrz" = "fusion_query/setup/FusionQueryProxy.xdrz"
